@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gtkprefs.c,v 1.134 2006/11/14 00:00:26 c_anthon Exp $
+ * $Id: gtkprefs.c,v 1.135 2006/11/16 14:30:25 c_anthon Exp $
  */
 
 #include "config.h"
@@ -151,7 +151,7 @@ read_board_designs ( void ) {
 
   plSystem = ParseBoardDesigns ( "boards.xml", FALSE );
 
-  sz = g_build_filename(szHomeDirectory, ".gnubg", "boards.xml", NULL);
+  sz = g_build_filename(szHomeDirectory, "boards.xml", NULL);
   plUser = ParseBoardDesigns ( sz, TRUE );
   g_free ( sz );
 
@@ -1966,7 +1966,7 @@ WriteDesignHeader( const char *szFile, FILE *pf ) {
   time ( &t );
   fputs ( ctime ( &t ), pf );
   fputs ( "\n"
-          "    $Id: gtkprefs.c,v 1.134 2006/11/14 00:00:26 c_anthon Exp $\n"
+          "    $Id: gtkprefs.c,v 1.135 2006/11/16 14:30:25 c_anthon Exp $\n"
           "\n"
           " -->\n"
           "\n"
@@ -1992,7 +1992,7 @@ DesignSave ( GtkWidget *pw, gpointer data ) {
   FILE *pf;
   GList **pplBoardDesigns = (GList **) data;
 
-  szFile = g_build_filename ( szHomeDirectory, ".gnubg/boards.xml", NULL);
+  szFile = g_build_filename ( szHomeDirectory, "boards.xml", NULL);
   BackupFile ( szFile );
 
   if ( ! ( pf = g_fopen ( szFile, "w+" ) ) ) {
